# deploy-fastapi

./: .gitignore  config.py  main.py  pyproject.toml  serverless.yml
