[tool.poetry]
name = "deploy-fastapi"
version = "0.1.0"
description = ""
authors = ["denis.khodishchenko <denys@hennessey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.2.1"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
